--- a/supplier_home_recieve.html
+++ b/supplier_home_recieve.html
@@ -53,15 +53,23 @@
             <!-- /.navbar-static-side -->
         </nav>
 
+
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12" dir="rtl">
                     <button style="float: left;" onclick="back()"  id="back" class="btn btn-danger">رجوع </button>
 
-                    <h2 id="name" style="text-align: center;"></h2>
+                    <h2 id="name" style="text-align: right;"></h2>
+                </div>
+                <div>
+                    <img src="temp.png" style="float:left;width: 60;height: 60;" dir="ltr" width="300pt" />
+
+
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
+
+
             <!-- /.row -->
             <div class="row">
                 <div class="col-lg-12">
