--- a/staff_summry.html
+++ b/staff_summry.html
@@ -112,9 +112,9 @@
                                     </table>
                                     <h1 id="loading_price" style="color: red;" hidden> برجاء الانتظار</h1>
                                     <button class="btn btn-primary" onclick="final()">تصفيه الحساب ( الخصومات والوقت الاضافى )</button>
-                                    <button class="btn btn-warning" style="margin-right: 5%;" onclick="removeExpensive()">تصفيه الحساب ( جميع المصروفات )</button>
+
                                     <a data-target="#myModal" role="button" style="margin-right: 5%;" class="btn btn-danger"
-                                        data-toggle="modal">تصفيه مصروف شهر محدد</a>
+                                        data-toggle="modal">تصفيه شهر محدد</a>
                                 </div>
                                 
                             </div>
