--- a/staff_summry.html
+++ b/staff_summry.html
@@ -125,7 +125,7 @@
                                         </tbody>
                                     </table>
                                     <h1 id="loading_price" style="color: red;" hidden> برجاء الانتظار</h1>
-                                    <button class="btn btn-primary" onclick="final()">تصفيه الحساب ( الخصومات والوقت الاضافى )</button>
+<!--                                    <button class="btn btn-primary" hidden onclick="final()">تصفيه الحساب ( الخصومات والوقت الاضافى )</button>-->
 
                                     <a data-target="#myModal" role="button" style="margin-right: 5%;" class="btn btn-danger"
                                         data-toggle="modal">تصفيه شهر محدد</a>
