--- a/supplier_home_recieve.html
+++ b/supplier_home_recieve.html
@@ -139,7 +139,7 @@
 
                                 </tbody>
                             </table>
-                            <button type="button" style="width:30%;" id="save" onclick="save()"
+                            <button type="button" style="width:30%;" id="save" onclick="save_for_salem()"
                                     class="btn btn-outline btn-primary btn-lg btn-block">حفظ
                             </button>
                         </div>
