--- a/staff_over_time.html
+++ b/staff_over_time.html
@@ -88,10 +88,11 @@
                                         <td>
                                             <select id="type" class="form-control">
 
-                                                <option value="75">ساعة</option>
-                                                <option value="150">ساعتين</option>
-                                                <option value="225">ثلاث ساعات</option>
-                                                <option value="300">اربع ساعات</option>
+                                                <option value="90">ساعة</option>
+                                                <option value="180">ساعتين</option>
+                                                <option value="270">ثلاث ساعات</option>
+                                                <option value="360">اربع ساعات</option>
+                                                <option value="450">خمس ساعات</option>
                                             </select></td>
                                     </tr>
                                     <tr>
@@ -208,10 +209,11 @@
 
         function getTimeHour(time){
             switch(time){
-                case "75": return "ساعة";
-                case "150": return "ساعتين";
-                case "225": return "ثلاث ساعات";
-                case "300": return "اربع ساعات";
+                case "90": return "ساعة";
+                case "180": return "ساعتين";
+                case "270": return "ثلاث ساعات";
+                case "360": return "اربع ساعات";
+                case "450": return "خمس ساعات";
             }
         }
 
