--- a/staff_subtract.html
+++ b/staff_subtract.html
@@ -190,7 +190,7 @@
         search();
         function search() {
 
-            database.ref('staff').child(key).child('subtract').on('value', function (snapshot) {
+            database.ref('staff').child(key).child('subtract').orderByChild('date').on('value', function (snapshot) {
                 document.getElementById("Customdata").innerHTML = ""
                 myTotal = 0
                 snapshot.forEach(function (childSnapshot) {
