--- a/staff_take_money.html
+++ b/staff_take_money.html
@@ -204,7 +204,7 @@
         search();
         function search() {
         var selectedMonth = document.getElementById("selector").value;
-            database.ref('staff').child(key).child('expenses').on('value', function (snapshot) {
+            database.ref('staff').child(key).child('expenses').orderByChild('date').on('value', function (snapshot) {
                 document.getElementById("Customdata").innerHTML = ""
                 myTotal = 0
                 snapshot.forEach(function (childSnapshot) {
