--- a/staff_over_time.html
+++ b/staff_over_time.html
@@ -93,6 +93,7 @@
                                                 <option value="270">ثلاث ساعات</option>
                                                 <option value="360">اربع ساعات</option>
                                                 <option value="450">خمس ساعات</option>
+                                                <option value="900">عشر ساعات</option>
                                             </select></td>
                                     </tr>
                                     <tr>
@@ -214,6 +215,7 @@
                 case "270": return "ثلاث ساعات";
                 case "360": return "اربع ساعات";
                 case "450": return "خمس ساعات";
+                case "900": return "عشر ساعات";
             }
         }
 
