--- a/home_page_staff.html
+++ b/home_page_staff.html
@@ -70,7 +70,8 @@
 
                         <!-- /.panel-heading -->
                         <div class="panel-body" dir="rtl">
-                            
+                            <a type="button" style="width:30%;" href='stuff_day_summary_for_substract.html'
+                                class="btn btn-outline btn-primary btn-lg btn-block">ملخص مصروف اليوم</a>
                             <table width="50%" id="myTable" dir="rtl"
                                 class="table table-striped table-bordered table-hover">
                                 <thead>
