--- a/home_page_staff.html
+++ b/home_page_staff.html
@@ -72,11 +72,11 @@
                         <div class="panel-body" dir="rtl">
                             <div>
                             <a type="button"  href='stuff_day_summary_for_expenses.html'
-                                class="btn btn-outline btn-primary">ملخص مصروف اليوم</a>
+                                class="btn btn-primary">ملخص مصروف اليوم</a>
                                 <a type="button"  href='stuff_day_summary_for_substract.html'
-                                class="btn btn-outline btn-danger">ملخص خصومات اليوم</a>
-                                <a type="button"  href='stuff_day_summary_for_substract.html'
-                                class="btn btn-outline btn-warning">ملخص وقت الاضافي اليوم</a>
+                                class="btn btn-danger">ملخص خصومات اليوم</a>
+                                <a type="button"  href='stuff_day_summary_for_overtime.html'
+                                class="btn btn-warning">ملخص وقت الاضافي اليوم</a>
                                 <br/><br/>
                             </div>
                             <table width="50%" id="myTable" dir="rtl"
