--- a/home_page_staff.html
+++ b/home_page_staff.html
@@ -70,11 +70,13 @@
 
                         <!-- /.panel-heading -->
                         <div class="panel-body" dir="rtl">
-                            <div>
-                            <a type="button"  href='stuff_day_summary_for_expenses.html'
-                                class="btn btn-primary">ملخص مصروف اليوم</a>
+                            <div style="align-items: center;width: 100%;text-align: center;">
                                 <a type="button"  href='stuff_day_summary_for_substract.html'
                                 class="btn btn-danger">ملخص خصومات اليوم</a>
+                                
+                            <a type="button" style="margin-left: 10%;margin-right: 10%;" href='stuff_day_summary_for_expenses.html'
+                                class="btn btn-primary">ملخص مصروف اليوم</a>
+                                
                                 <a type="button"  href='stuff_day_summary_for_overtime.html'
                                 class="btn btn-warning">ملخص وقت الاضافي اليوم</a>
                                 <br/><br/>
