--- a/home_page_employee.html
+++ b/home_page_employee.html
@@ -81,8 +81,15 @@
                                 <option value="4">كفر الشيخ</option>
                             </select>
 
-                            <a type="button" style="width:30%;" href='employee_day_summary.html'
-                                class="btn btn-outline btn-primary btn-lg btn-block">ملخص شغل اليوم</a>
+                            <div style="align-items: center;width: 100%;text-align: center;">
+                                <a type="button"  href='employee_day_summary.html'
+                                class="btn btn-danger">ملخص شغل اليوم</a>
+                                
+                            <a type="button" style="margin-left: 1%;margin-right: 1%;" href='employee_day_summary_masrofat.html'
+                                class="btn btn-primary">ملخص مصروف اليوم</a>
+                                
+                                <br/><br/>
+                            </div>
                             <table width="50%" id="myTable" dir="rtl"
                                 class="table table-striped table-bordered table-hover">
                                 <thead>
