--- a/employee_home_send.html
+++ b/employee_home_send.html
@@ -151,7 +151,7 @@
                                         <th>السعر</th>
                                         <th>الاجمالى</th>
                                         <th>تم استرداد</th>
-                                        <th>المتبقي</th>
+                                        <th id="motab2y">المتبقي</th>
                                         <th>خيارات</th>
                                     </tr>
 
@@ -210,12 +210,15 @@
 
 
         var key = getParameter("key");
+        var city = getParameter("city");
         var name = getParameter("name");
         var myTotal = 0;
         document.getElementById("name").innerHTML = name
 
         var database = firebase.database();
-
+        if(city == 2)
+        document.getElementById('motab2y').style.display = 'none';
+        
         getProduct()
         getNote()
 
@@ -266,7 +269,9 @@
                 myTotal = 0
                 snapshot.forEach(function (childSnapshot) {
                     var childData = childSnapshot.val();
-                    if (childData.count - childData.received != 0) {
+                    if(city == 2){
+                        var table = `<tr> <td> ${childData.date} </td><td> ${childData.count} </td> <td> ${childData.type} </td> <td> ${childData.color} </td> <td> ${childData.price} </td> <td> ${childData.total} </td> <td> <input   onchange="edits('${childSnapshot.key}',this)"  value="${childData.received}" class="form-control"></textarea></td><td> <button style="color:red;" class='btn btn-error' onclick="deleteItem('${date}','${childSnapshot.key}')">حذف </a> </td> </tr>`;
+                    }else if (childData.count - childData.received != 0) {
                         var table = `<tr> <td> ${childData.date} </td><td> ${childData.count} </td> <td> ${childData.type} </td> <td> ${childData.color} </td> <td> ${childData.price} </td> <td> ${childData.total} </td> <td> <input   onchange="edits('${childSnapshot.key}',this)"  value="${childData.received}" class="form-control"></textarea></td><td style='color:red'> ${childData.count - childData.received} </td><td> <button style="color:red;" class='btn btn-error' onclick="deleteItem('${date}','${childSnapshot.key}')">حذف </a> </td> </tr>`;
                     } else {
                         var table = `<tr> <td> ${childData.date} </td><td> ${childData.count} </td> <td> ${childData.type} </td> <td> ${childData.color} </td> <td> ${childData.price} </td> <td> ${childData.total} </td> <td> <input  onchange="edits('${childSnapshot.key}',this)" value="${childData.received}" class="form-control"></textarea></td><td style='color:black'> ${childData.count - childData.received} </td><td> <button style="color:red;" class='btn btn-error' onclick="deleteItem('${date}','${childSnapshot.key}')">حذف </a> </td> </tr>`;
