--- a/home_page_employee.html
+++ b/home_page_employee.html
@@ -85,7 +85,7 @@
                          
                                 
                                 <a type="button" style="margin-left: 1%;margin-right: 1%;" href='employee_day_summary_for_ba2y.html'
-                                class="btn btn-danger">لنا خارج</a>
+                                class="btn btn-danger">ملخص المتبقي</a>
 
                             <a type="button" style="margin-left: 1%;margin-right: 1%;" href='employee_day_summary_masrofat.html'
                                 class="btn btn-primary">ملخص مصروف اليوم</a>
