--- a/employee_day_summary_masrofat.html
+++ b/employee_day_summary_masrofat.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>ملخص اليوم </title>
+    <title>ملخص مصروف اليوم</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="driver.css" rel="stylesheet">
