--- a/home_page_employee.html
+++ b/home_page_employee.html
@@ -91,7 +91,7 @@
                                 class="btn btn-primary">ملخص مصروف اليوم</a>
 
                                 <a type="button"  href='employee_day_summary.html'
-                                class="btn btn-success">صادر اليوم</a>
+                                class="btn btn-success">ملخص صادر اليوم</a>
                                 
                                 <br/><br/>
                             </div>
