--- a/home_page_employee.html
+++ b/home_page_employee.html
@@ -93,6 +93,9 @@
                                 <a type="button"  href='employee_day_summary.html'
                                 class="btn btn-success">ملخص صادر اليوم</a>
                                 
+                                <a type="button"  href='employee_fatora_for_all.html'
+                                class="btn btn-danger">الرصيد </a>
+                                
                                 <br/><br/>
                             </div>
                             <table width="50%" id="myTable" dir="rtl"
