--- a/employee_fatora_for_all.html
+++ b/employee_fatora_for_all.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>الفاتورة </title>
+    <title>اجمالي لنا / علينا</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="driver.css" rel="stylesheet">
@@ -63,7 +63,7 @@
                 </div>
 
                 <br />
-                <h2 style="text-align: center;">فاتورة </h2>
+                <h2 style="text-align: center;">اجمالي لنا / علينا </h2>
                 
                 <h2 id="name" style="text-align: center;">برجاء الانتظار</h2>
                 <!-- /.row -->
