--- a/employee_fatora_for_all.html
+++ b/employee_fatora_for_all.html
@@ -63,7 +63,7 @@
                 </div>
 
                 <br />
-                <h2 style="text-align: center;">اجمالي لنا / علينا </h2>
+                <h2 style="text-align: center;">لنا / علينا </h2>
                 
                 <h2 id="name" style="text-align: center;">برجاء الانتظار</h2>
                 <!-- /.row -->
